# microsoft-documentation-mcp-server

./: Docker  Dockerfile  main.py  pyproject.toml
